# mini-8

./: CMakeLists.txt  TODO.md
src/: loader.c  loader.h  main.c  random.c  random.h  renderer.c  renderer.h
src/core/: chip.c  chip.h  instructions.c  instructions.h
